backend/api/tests/integration/snapshots/integration__playlist__update_and_publish_browse-4.snap
---
source: tests/integration/playlist.rs
expression: body
---
{
  "playlists": [
    {
      "id": "[id]",
      "publishedAt": "[published_at]",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": true,
      "isLiked": false,
      "playlistData": {
        "draftOrLive": "draft",
        "displayName": "playlist name1",
        "language": "en-us",
        "description": "asdasdasd",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": {
          "id": "[id]",
          "kind": "Cover",
          "is_complete": true
        },
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": [
          "0cc084bc-7c83-11eb-9f77-e3218dffb008",
          "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
        ]
      }
    },
    {
      "id": "[id]",
      "publishedAt": "[published_at]",
      "creatorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorId": "1f241e1b-b537-493f-a230-075cb16315be",
      "authorName": "Bobby Tables",
      "likes": 0,
      "plays": 0,
      "liveUpToDate": false,
      "isLiked": false,
      "playlistData": {
        "draftOrLive": "draft",
        "displayName": "playlist name2",
        "language": "en",
        "description": "draft test description",
        "lastEdited": "[last_edited]",
        "privacyLevel": "public",
        "otherKeywords": "",
        "translatedKeywords": "",
        "translatedDescription": {},
        "cover": {
          "id": "[id]",
          "kind": "Cover",
          "is_complete": true
        },
        "ageRanges": [],
        "affiliations": [],
        "categories": [],
        "additionalResources": [],
        "items": [
          "3a71522a-cd77-11eb-8dc1-af3e35f7c743"
        ]
      }
    }
  ],
  "pages": 1,
  "totalPlaylistCount": 2
}
